fuel-client/src/client/schema/snapshots/fuel_gql_client__client__schema__tx__tests__dry_run_tx_gql_output.snap
---
source: fuel-client/src/client/schema/tx.rs
assertion_line: 339
expression: query.query
---
mutation Mutation($_0: HexString!, $_1: Boolean) {
  dryRun(tx: $_0, utxoValidation: $_1) {
    param1
    param2
    amount
    assetId
    gas
    digest
    contract {
      id
    }
    is
    pc
    ptr
    ra
    rb
    rc
    rd
    reason
    receiptType
    to {
      id
    }
    toAddress
    val
    len
    result
    gasUsed
    data
    messageId
    sender
    recipient
    nonce
    contractId
  }
}

