fuel-client/src/client/schema/snapshots/fuel_gql_client__client__schema__tx__tests__opaque_transaction_by_id_query_gql_output.snap
---
source: fuel-client/src/client/schema/tx.rs
expression: operation.query
---
query Query($_0: TransactionId!) {
  transaction(id: $_0) {
    rawPayload
    receipts {
      rawPayload
    }
    status {
      __typename
      ... on SubmittedStatus {
        time
      }
      ... on SuccessStatus {
        block {
          id
        }
        time
        programState {
          returnType
          data
        }
      }
      ... on SqueezedOutStatus {
        reason
      }
      ... on FailureStatus {
        block {
          id
        }
        time
        reason
        programState {
          returnType
          data
        }
      }
    }
  }
}

