fuel-client/src/client/schema/snapshots/fuel_gql_client__client__schema__tx__tests__submit_tx_gql_output.snap
---
source: fuel-client/src/client/schema/tx.rs
assertion_line: 325
expression: query.query

---
mutation Mutation($_0: HexString!) {
  submit(tx: $_0) {
    id
  }
}

