fuel-client/src/client/schema/snapshots/fuel_gql_client__client__schema__tx__tests__transactions_connection_query_gql_output.snap
---
source: fuel-client/src/client/schema/tx.rs
assertion_line: 292
expression: operation.query

---
query Query($_0: Int, $_1: String, $_2: Int, $_3: String) {
  transactions(first: $_0, after: $_1, last: $_2, before: $_3) {
    edges {
      cursor
      node {
        rawPayload
        receipts {
          rawPayload
        }
        status {
          __typename
          ... on SubmittedStatus {
            time
          }
          ... on SuccessStatus {
            block {
              id
            }
            time
            programState {
              returnType
              data
            }
          }
          ... on FailureStatus {
            block {
              id
            }
            time
            reason
            programState {
              returnType
              data
            }
          }
        }
      }
    }
    pageInfo {
      endCursor
      hasNextPage
      hasPreviousPage
      startCursor
    }
  }
}

